--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header id="header"></header>
     <div id="content"></div>
     <script type="module" src="js/main.js"></script>
   </body>
